Bug 114664 - The paragraph style is lost after delete and undo
Summary: The paragraph style is lost after delete and undo
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
4.2.0.4 release
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:6.1.0
Keywords:
Depends on:
Blocks: Undo-Redo
  Show dependency treegraph
 
Reported: 2017-12-23 14:56 UTC by Mark Hung
Modified: 2018-02-07 14:21 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Delete and undo (11.71 KB, application/vnd.oasis.opendocument.presentation)
2017-12-23 14:57 UTC, Mark Hung
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Mark Hung 2017-12-23 14:56:50 UTC
Description:
Press delete at the end of a paragraph is meant to connect the next paragraph, but undo failed.

Steps to Reproduce:
1.Open the attach file.
2.Place the text at the end of the second line. ( after "P1" ).
3.Press delete to connect two paragraphs.
4.Press ctrl+z to undo the result.

Actual Results:  
The third line ("P2") lose it's style. Bullet and alignment have been changed.

Expected Results:
The third line should return to it's original status, that is no bullet.


Reproducible: Always


User Profile Reset: No



Additional Info:
Verified with 
版本:5.4.0.3
組建 ID:7556cbc6811c9d992f4064ab9287069087d7f62c
CPU threads: 8; OS: Windows 6.2; UI render: 預設; 
語言地區:zh-TW (zh_TW); Calc: group
as well as 4.2.0 portable on Windows.


User-Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/63.0.3239.84 Safari/537.36
Comment 1 Mark Hung 2017-12-23 14:57:57 UTC
Created attachment 138610 [details]
Delete and undo
Comment 2 Mark Hung 2017-12-23 15:02:37 UTC
Note that tdf#99524 is similar - except that it use "Backspace" to connect to the previous paragraph - intended behavior are slight different in two cases though both have something wrong with undo.
Comment 3 raal 2017-12-28 22:53:02 UTC
I can confirm with Version: 6.1.0.0.alpha0+
Build ID: 88f6ffeb9e0c0b942c2b0bc9d60af7bb7a6caaf8
CPU threads: 4; OS: Linux 4.4; UI render: default; VCL: gtk2;
Comment 4 Commit Notification 2018-01-04 11:43:41 UTC
Mark Hung committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=2dd45c0c62b3ef3d8057b3fc70af24ae11a3d01d

tdf#114664 allow the splitted paragraph attributes to recover.

It will be available in 6.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Xisco Faulí 2018-02-05 11:09:43 UTC
A polite ping to Mark Hung: is this bug fixed? if so, could you
please close it as RESOLVED FIXED ? Thanks