tdf#114664 allow the splitted paragraph attributes to recover.

Calling the SetParaAttribs to the splitted paragraph is effective
only after ParagraphInserted is invoked.

Change-Id: I1c2a58bc40e2a84d7bed4d85918e1d0ecdbe267f